# adaptive_gnn

./: .gitignore  PKG-INFO  README.md  SOURCES.txt  __init__.py  __main__.py  biased_noise.py  bp_decoder.py  build_dataset.py  codes_q.py  configs.py  dataset.py  evaluate.py  gnn_model.py  large_train.npz  placeholder.py  pyproject.toml  qldpc_circuit.py  sample_syndromes.py  tanner_graph.py  test.npz  test_imports.py  top_level.txt  toy_drift.npz  toy_graph_meta.json  train_selfsupervised.py  utils.py
.claude/: settings.local.json
Context_For_Project/: README.md  codes_q.py  results.npz  sample_syndromes.py  test_imports.py
astra_stim/: __init__.py  __main__.py  biased_noise.py  qldpc_circuit.py  sample_syndromes.py
codes/: __init__.py  code_registry.py  codes_q.py  utils.py
data/: 144_test_p070.npz  144_test_p080.npz  144_test_p080_ou.npz  144_test_p080_sine.npz  144_test_p090.npz  144_test_p100.npz  144_train_ou.npz  144_train_p050.npz  144_train_p060.npz  144_train_p070.npz  144_train_p080.npz  144_train_rtn.npz  144_train_sine.npz  _test_sup.npz  astra_test_p035.npz  astra_train_uniform.npz  biased_circuit_d6_r10.npz  big144_test_p04.npz  big144_test_p06.npz  big144_test_p06_sine.npz  big144_train_p03.npz  big144_train_p05.npz  big144_train_p07.npz  big144_train_sine.npz  big288_test_p03.npz  big288_test_p04.npz  big288_test_p04_sine.npz  big288_train_p02.npz  big288_train_p03.npz  big288_train_p04.npz  big288_train_sine.npz  circuit_p001_test.npz  circuit_test.npz  circuit_train_p003.npz  circuit_train_p005.npz  circuit_train_p007.npz  code_cap.npz  (+76 more)
(+74 files in other folders)
