[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qldpc-pipeline"
version = "0.1.0"
description = "QLDPC decoding pipeline with GNN-augmented belief propagation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.10",
    "stim>=1.13",
    "torch>=2.2",
    "torch-geometric>=2.5",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "ldpc>=2.2.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["astra_stim*", "codes*", "gnn_pipeline*", "tests*"]
